# brilliantsoftwarepdf

./: .gitignore  BUILD_SYSTEM.md  CI  LICENSE_INTEGRATION_GUIDE.md  PYTHON_BUILD_SYSTEM.md  README.md  build.ps1  check_rebuild.py  db.sqlite  index.html  latest.json  package-lock.json  package.json  test-catalog.catalog  tsconfig.json  vite.config.ts
src/: main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  build_scripts.py  db.sqlite  simple_build.py  tauri.conf.json  test_build.py
src-tauri/scripts/: pdf_generator.py  requirements.txt
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/db/: catalog_repository.rs  connection.rs  info_repository.rs  item_repository.rs  mod.rs  section_repository.rs  settings_db.rs
src-tauri/src/license/: commands.rs  guard.rs  mod.rs  storage.rs  types.rs  validator.rs
src-tauri/src/models/: catalog.rs  info.rs  item.rs  mod.rs  section.rs
src-tauri/src/settings/: mod.rs  settings_repository.rs
src-tauri/src/updater/: check.rs  download.rs  mod.rs
src/@types/interfaces/: settings.ts  types.ts
src/assets/: fakeDatabase.ts  fakeSectionItens.ts
src/components/: DatabaseMigrator.tsx
src/components/ImageUploader/: index.tsx
src/components/LicenseActivation/: LicenseActivation.tsx
src/components/auth/: Login.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useAuth.ts  useAutoLogin.ts  useImageUpload.ts  useInfo.ts  useItem.ts  useLicense.ts  useSection.ts  useUserProfile.ts
src/i18n/: en.json  es.json  index.ts  pt.json
src/routes/: addItem.tsx  addSection.tsx  home.tsx  profile.tsx
(+29 files in other folders)
