[package]
name = "brilliant-pdf"
version = "1.0.0"
description = "A beatifull and usefull pdf generator app."
authors = ["jockamt"]
edition = "2021"

[lib]
name = "brilliant_software_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
dirs-next = "2"

[dependencies.rusqlite]
version = "0.31"
features = ["bundled"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.0.0"

